# AuricIDE

./: .gitignore  .jscpd.json  .prettierignore  CLAUDE.md  Gemini.md  README.md  Test.canvas  check_env.sh  clean.sh  eslint.config.mjs  knip.ts  next.config.ts  package.json  pnpm-lock.yaml  run_dev.sh  tsconfig.json  vitest.config.mts
.husky/: pre-commit
docs/: brand-kit.md  press-kit.md  semantic-markdown-highlighting.md
dynamic-providers/: README.md
e2e/: hello.spec.ts  requirements.spec.ts
src/: diagram.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  crashlog.rs  database.rs  lib.rs  llm.rs  main.rs  mcp.rs  providers.rs
src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
src/app/components/: CrashBoundary.test.tsx  CrashBoundary.tsx
src/lib/ascii-art/: detector.test.ts  detector.ts  repair.test.ts  repair.ts
src/lib/blueprints/: constants.ts  serverSync.test.ts  serverSync.ts
src/lib/canvas/: markdownParser.test.ts  markdownParser.ts
src/lib/commands/: registry.test.ts  registry.ts
src/lib/editor/: auricTheme.test.ts  auricTheme.ts  findReferencesExtension.test.ts  findReferencesExtension.ts  gitGutterExtension.test.ts  gitGutterExtension.ts  jsonLintExtension.test.ts  jsonLintExtension.ts  markdownCompletionSource.test.ts  markdownCompletionSource.ts  markdownFoldExtension.test.ts  markdownFoldExtension.ts  markdownHeadingParser.test.ts  markdownHeadingParser.ts  markdownLintExtension.test.ts  markdownLintExtension.ts  mermaidBlocks.test.ts  setup.test.ts  (+28 more)
src/mcp/: db.ts  server.ts
(+334 files in other folders)
