[package]
name = "auric-ide"
version = "0.1.0"
description = "AuricIDE – AI-native Markdown editor"
authors = ["Jörg Amelunxen"]
license = "AGPL-3.0-only"
repository = "https://github.com/PlasmaLampe/AuricIDE"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
walkdir = "2"
git2 = "0.19"
notify = "8.0"
base64 = "0.22"
portable-pty = "0.9"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
dirs = "5"
tempfile = { version = "3", optional = true }
serde_json = "1.0.149"
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
